# sdks

./: .gitattributes  .gitignore  .oxlintrc.json  .pre-commit-config.yaml  .rumdl.toml  .typos.toml  CHANGELOG.md  CONTRIBUTING.md  README.md  Taskfile.yml  biome.json  go.work  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  poly.toml  pyproject.toml  tsconfig.base.json
.github/workflows/: ci-go.yml  ci-python.yml  ci-typescript.yml  publish-pubdev.yaml  publish-python.yml  publish-typescript.yml  publish.yaml  release.yml  spec-sync.yml  validate.yml
go/: README.md  client.go  doc.go  errors_test.go  extract.go  extract_test.go  go.mod  go.sum  helpers_test.go  http.go  jobs.go  jobs_test.go  result_fixtures_test.go  retry_test.go  sandbox_test.go  types.go  version.go
scripts/: sync-versions.py
spec/: openapi.yaml
spec/fixtures/: extraction_result_docx_with_revisions.json  extraction_result_minimal.json  extraction_result_pdf.json  extraction_result_with_uris.json  extraction_result_xlsx_with_children.json
tasks/: dart.yml  go.yml  python.yml  spec.yml  typescript.yml  version.yml
