[project]
name = "kreuzberg-cloud-sdk-workspace"
version = "0.0.0"
description = "Workspace root for the kreuzberg-cloud SDK monorepo"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]

[dependency-groups]
dev = [
  "covdefaults>=2.3.0",
  "kreuzberg-cloud",
  "mypy>=1.20.2",
  "openapi-python-client>=0.27",
  "prek>=0.3.9",
  "pyproject-fmt>=2.21.2",
  "pytest>=9.0.3",
  "pytest-asyncio>=1.3.0",
  "pytest-cov>=7.1.0",
  "respx>=0.22",
  "ruff>=0.15.12",
  "validate-pyproject>=0.24.1",
]

[tool.uv]
sources.kreuzberg-cloud = { workspace = true }
package = false
workspace.members = [ "packages/python" ]
cache-keys = [
  { file = "pyproject.toml" },
  { file = "packages/python/pyproject.toml" },
  { file = "spec/openapi.yaml" },
]

[tool.ruff]
target-version = "py310"
line-length = 120
src = [ "packages/python/src" ]
extend-exclude = [ "packages/python/src/kreuzberg_cloud/_generated", "spec" ]
format.docstring-code-line-length = 120
format.docstring-code-format = true
lint.select = [ "ALL" ]
lint.ignore = [
  "ANN401",
  "ASYNC109",
  "ASYNC110",
  "BLE001",
  "COM812",
  "D100",
  "D104",
  "D107",
  "D205",
  "E501",
  "EM",
  "FBT",
  "FIX",
  "ISC001",
  "PD011",
  "PGH003",
  "PLR2004",
  "PLW0603",
  "S104",
  "S110",
  "S603",
  "TD",
  "TRY",
]
lint.per-file-ignores."**/tests/**/*.*" = [
  "A005",
  "ANN",
  "ARG001",
  "ARG002",
  "ASYNC230",
  "BLE001",
  "D",
  "N806",
  "N815",
  "PGH003",
  "PLC",
  "PLR0915",
  "PLR2004",
  "PT006",
  "PT007",
  "PT013",
  "PT017",
  "PT031",
  "RUF012",
  "S",
  "SIM117",
  "SLF001",
]
lint.isort.known-first-party = [ "kreuzberg_cloud" ]
lint.mccabe.max-complexity = 15
lint.pydocstyle.convention = "google"
lint.pylint.max-args = 10
lint.pylint.max-branches = 15
lint.pylint.max-returns = 10

[tool.pyproject-fmt]
keep_full_version = true
max_supported_python = "3.14"

[tool.mypy]
packages = [ "kreuzberg_cloud" ]
exclude = [ "packages/python/src/kreuzberg_cloud/_generated", "packages/python/tests" ]
python_version = "3.10"
disable_error_code = [ "import-untyped", "untyped-decorator" ]
implicit_reexport = false
show_error_codes = true
strict = true
namespace_packages = true
overrides = [ { module = [ "httpx", "respx" ], ignore_missing_imports = true } ]

[tool.pytest]
ini_options.testpaths = [ "packages/python/tests" ]
ini_options.norecursedirs = [ "dist", "build", "*.egg" ]
ini_options.asyncio_mode = "auto"
ini_options.asyncio_default_fixture_loop_scope = "function"

[tool.coverage]
run.branch = true
run.omit = [
  "packages/python/src/kreuzberg_cloud/_generated/*",
  "packages/python/tests/*",
]
run.plugins = [ "covdefaults" ]
run.source = [ "packages/python/src/kreuzberg_cloud" ]
report.exclude_lines = [
  "@(abc\\.)?abstractmethod",
  "class .*\\bProtocol\\):",
  "def __repr__",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "pragma: no cover",
  "raise NotImplementedError",
]
report.fail_under = 80
